--- a/1.html
+++ b/1.html
@@ -10,22 +10,24 @@
 		<title>Sintropica Consultoria Blog</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 		<link rel="stylesheet" href="assets/css/main.css" />
 
 	</head>
 	<body class="is-preload">
 		<!-- Content -->
 			<div id="content">
-				<div id="sidebar2"><h1> <a href= "#">POSTS RECENTES</a></h1><a href="#" class="image featured"><img src="images/pic01.jpg" alt="images" />
-					<a href="#" class="image featured"><img src="images/pic01.jpg" alt="images" />
-					<a href="#" class="image featured"><img src="images/pic02.jpg" alt="tles and subtitles will wrap automatically when necessary, so don't worry
-									if they get too long. You can a" />
-					<a href="#" class="image featured"><img src="images/pic03.jpg" alt=" fad fadsf dsfadsfdasfdasfdfd adf a dfdf " />
-					<a href="#" class="image featured"><img src="images/pic04.jpg" alt="f a dfdaf adf ff df af" />
-					<a href="#" class="image featured"><img src="images/pic05 jpg" alt="" />
-					<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" />
-					<a href="#" class="image featured"><img src="images/pic07.jpg" alt="" />
-					<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" />
+				<div id="sidebar2"><h1> <a href= "#">POSTS RECENTES</a></h1>
+
+					<a href="#" class="image featured"><img src="images/pic01.jpg" alt="images" /><figcaption>Legenda da imagem explicando o conteúdo ou contextocontextocontexto contextocontexto contexto.</figcaption></a>
+					<a href="#" class="image featured"><img src="images/pic02.jpg" alt="images" /><figcaption>Pesquisa científica</figcaption></a>
+					<a href="#" class="image featured"><img src="images/pic03.jpg" alt="images" /><figcaption>Agricultura de Precisão: Soluções Tecnológicas para Desafios Climáticos</figcaption></a>
+					<a href="#" class="image featured"><img src="images/pic04.jpg" alt="images" /><figcaption>O Poder do Python na Análise de Dados: Um Estudo de Caso com os Registros de Votação de 2022</figcaption></a>
+					<a href="#" class="image featured"><img src="images/pic05.jpg" alt="images" /><figcaption>Artigo: Uso de Inteligência Artificial no Geoprocessamento para Análise de Tipos de Telhados em Jacareí</figcaption></a>
+					<a href="#" class="image featured"><img src="images/pic06.jpg" alt="images" /><figcaption>WEBSIG que integram mapas interativos diretamente em páginas web</figcaption></a>
+					<a href="#" class="image featured"><img src="images/pic07.jpg" alt="images" /><figcaption> Mapas temáticos sobre uso do solo</figcaption></a>
+					<a href="#" class="image featured"><img src="images/pic08.jpg" alt="images" /><figcaption>Queimadas mata atlantica</figcaption></a>
+
 				</div>
 				<div class="inner">
 
@@ -109,6 +111,18 @@
 						</div>
 
 				</div>
+				<div id="footer">
+				   		<p> renanambrosia@gmail.com </p>
+				   		<p> 1999999999999</p>
+				   		<p>siga-nos: 
+				   			<a target="_blank" href="https://www.reddit.com/user/CommercialSweet6014/" class="icon brands fa-reddit"style="background-color: white; color: #FF4500"></a>
+				   			<a target="_blank" href="https://www.youtube.com/channel/UCWEr83yP5Ja6_49Kcr3QwDw" class="icon brands fa-youtube"style=" background-color: white; color: red"></a>
+				   			<a target="_blank" href="https://www.linkedin.com/in/renan-ambiel-74439a1b7/" class="icon brands fa-linkedin"style="background-color: white; color:#0080FF;">
+				   			<a target="_blank" href="https://www.tumblr.com/blog/ambrosiaconsultoria-blog" class="icon brands fa-tumblr" style="background-color: black ; color: white;"></a>
+				   			<a target="_blank" href="https://github.com/RenanAmbiel" class="icon brands fa-github fa-fade" style="background-color: white; color: black;"></a>
+				   			
+				   		</a></p>
+				</div>
 			</div>
 
 
@@ -125,14 +139,14 @@
 							<li><a href="#">aquivo</a></li>
 							<li><a href="">livros </a></li>
 							<li><a href=""target="_blank" >scripts</a></li>
-							<li><a href="">contato </a></li>
+							<li><a href="#footer">contato </a></li>
 						</ul>
 					</nav>
 
 				<!-- Search -->
 					<section class="box search">
 						<form method="post" action="#">
-							<input type="text" class="text" name="search" placeholder="Search" />
+							<input type="text" class="text" name="search" placeholder="Em manutençao" />
 						</form>
 					</section>
 
@@ -145,40 +159,15 @@
 						</div>
 					</section>
 
-				<!-- Recent Posts -->
-					<section class="box recent-posts">
-						<header>
-							<h2>Recent Posts</h2>
-						</header>
-						<ul>
-							<li><a href="#">Agricultura sintropica</a></li>
-							<li><a href="#">Pesquisa científica</a></li>
-							<li><a href="#">Sed dolore magna</a></li>
-							<li><a href="#">Malesuada commodo</a></li>
-							<li><a href="#">Ipsum metus nullam</a></li>
-						</ul>
-					</section>
 
-				<!-- Recent Comments -->
-					<section class="box recent-comments">
-						<header>
-							<h2>Recent Comments</h2>
-						</header>
-						<ul>
-							<li>case on <a href="#">Lorem ipsum dolor</a></li>
-							<li>molly on <a href="#">Sed dolore magna</a></li>
-							<li>case on <a href="#">Sed dolore magna</a></li>
-						</ul>
-					</section>
-
-				
 				<!-- Copyright -->
 					<ul id="copyright">
-						<li>&copy; Untitled.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; Striped.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
-
 			</div>
 
+
+		
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
@@ -192,6 +181,5 @@
 		            .then(data => document.getElementById("fileContent").innerText = data);
 		    </script>
 
-		
 	</body>
 </html>
