--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
 
 		<!-- Sidebar -->
 			<div id="sidebar">
-
+					<div id="footer">
+				    	ConteúdoConteúdoConteúdoConteúdoConteúdoConteúdoConteúdoConteúdoConteúdoConteúdoConteúdoConteúdoConteúdoConteúdoConteúdoConteúdoConteúdoConteúdoConteúdoConteúdoConteúdoConteúdoConteúdoConteúdoConteúdoConteúdoConteúdoConteúdoConteúdoConteúdoConteúdoConteúdoConteúdoConteúdoConteúdoConteúdoConteúdoConteúdoConteúdoConteúdoConteúdoConteúdoConteúdoConteúdoConteúdoConteúdo do rodapé 
+						</div>
 				<!-- Logo -->
 					<h1 id="logo"><a href="index.html">Sintrópica</a></h1>
 
@@ -79,7 +81,7 @@
 				<!-- Copyright -->
 					<ul id="copyright">
 						<div id="mensaageam"></div>
-						<li>&copy; Untitled.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; striped.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 			</div>
 
