--- a/1.html
+++ b/1.html
@@ -17,9 +17,9 @@
 	<body class="is-preload">
 		<!-- Content -->
 			<div id="content">
-				<div id="sidebar2"><h1> <a href= "#">POSTS RECENTES</a></h1>
+				<div id="sidebar2"><h4> <a href= "#">POSTS RECENTES</a></h4>
 
-					<a href="#" class="image featured"><img src="images/pic01.jpg" alt="images" /><figcaption>Legenda da imagem explicando o conteúdo ou contextocontextocontexto contextocontexto contexto.</figcaption></a>
+					<a href="#" class="image featured"><img src="images/pic01.jpg" alt="images" /><figcaption>Agricultura sintropica</figcaption></a>
 					<a href="#" class="image featured"><img src="images/pic02.jpg" alt="images" /><figcaption>Pesquisa científica</figcaption></a>
 					<a href="#" class="image featured"><img src="images/pic03.jpg" alt="images" /><figcaption>Agricultura de Precisão: Soluções Tecnológicas para Desafios Climáticos</figcaption></a>
 					<a href="#" class="image featured"><img src="images/pic04.jpg" alt="images" /><figcaption>O Poder do Python na Análise de Dados: Um Estudo de Caso com os Registros de Votação de 2022</figcaption></a>
@@ -98,14 +98,12 @@
 
 					<!-- Pagination -->
 						<div class="pagination">
-							<!--<a href="#" class="button previous">Previous Page</a>-->
+							<a href="index.html#" class="button previous">Previous Page</a>
 							<div class="pages">
 								<a href="1.html#"class="active">1</a>
 								<a href="2.html#">2</a>
 								<a href="3.html#">3</a>
 								<a href="4.html#">4</a>
-								<span>&hellip;</span>
-								<a href="#">20</a>
 							</div>
 							<a href="2.html#" class="button next">Next Page</a>
 						</div>
@@ -113,7 +111,6 @@
 				</div>
 				<div id="footer">
 				   		<p> renanambrosia@gmail.com </p>
-				   		<p> 1999999999999</p>
 				   		<p>siga-nos: 
 				   			<a target="_blank" href="https://www.reddit.com/user/CommercialSweet6014/" class="icon brands fa-reddit"style="background-color: white; color: #FF4500"></a>
 				   			<a target="_blank" href="https://www.youtube.com/channel/UCWEr83yP5Ja6_49Kcr3QwDw" class="icon brands fa-youtube"style=" background-color: white; color: red"></a>
@@ -139,7 +136,7 @@
 							<li><a href="#">aquivo</a></li>
 							<li><a href="">livros </a></li>
 							<li><a href=""target="_blank" >scripts</a></li>
-							<li><a href="#footer">contato </a></li>
+							<li><a href="https://sintropicaconsultoria.netlify.app/#contact">contato </a></li>
 						</ul>
 					</nav>
 
