--- a/1.html
+++ b/1.html
@@ -19,12 +19,11 @@
 			<div id="content">
 				<div id="sidebar2"><h4> <a href= "#">POSTS RECENTES</a></h4>
 
-					<a href="#" class="image featured"><img src="images/pic01.jpg" alt="images" /><figcaption>Agricultura sintropica</figcaption></a>
-					<a href="#" class="image featured"><img src="images/pic02.jpg" alt="images" /><figcaption>Pesquisa científica</figcaption></a>
-					<a href="#" class="image featured"><img src="images/pic03.jpg" alt="images" /><figcaption>Agricultura de Precisão: Soluções Tecnológicas para Desafios Climáticos</figcaption></a>
-					<a href="#" class="image featured"><img src="images/pic04.jpg" alt="images" /><figcaption>O Poder do Python na Análise de Dados: Um Estudo de Caso com os Registros de Votação de 2022</figcaption></a>
-					<a href="#" class="image featured"><img src="images/pic05.jpg" alt="images" /><figcaption>Artigo: Uso de Inteligência Artificial no Geoprocessamento para Análise de Tipos de Telhados em Jacareí</figcaption></a>
-					<a href="#" class="image featured"><img src="images/pic06.jpg" alt="images" /><figcaption>WEBSIG que integram mapas interativos diretamente em páginas web</figcaption></a>
+					<a href="1.html#" class="image featured"><img src="images/pic01.jpg" alt="images" /><figcaption>Agricultura sintropica</figcaption></a>
+					<a href="2.html#" class="image featured"><img src="images/pic02.jpg" alt="images" /><figcaption>Pesquisa científica</figcaption></a>
+					<a href="3.html#" class="image featured"><img src="images/pic03.jpg" alt="images" /><figcaption>Agricultura de Precisão: Soluções Tecnológicas para Desafios Climáticos</figcaption></a>
+					<a href="4.html#" class="image featured"><img src="images/pic04.jpg" alt="images" /><figcaption>O Poder do Python na Análise de Dados: Um Estudo de Caso com os Registros de Votação de 2022</figcaption></a>
+					<a href="5.html#" class="image featured"><img src="images/pic05.jpg" alt="images" /><figcaption>Artigo: Uso de Inteligência Artificial no Geoprocessamento para Análise de Tipos de Telhados em Jacareí</figcaption></a>					<a href="#" class="image featured"><img src="images/pic06.jpg" alt="images" /><figcaption>WEBSIG que integram mapas interativos diretamente em páginas web</figcaption></a>
 					<a href="#" class="image featured"><img src="images/pic07.jpg" alt="images" /><figcaption> Mapas temáticos sobre uso do solo</figcaption></a>
 					<a href="#" class="image featured"><img src="images/pic08.jpg" alt="images" /><figcaption>Queimadas mata atlantica</figcaption></a>
 
@@ -43,18 +42,7 @@
 								<p>Os beneficios de uma agrilcultura sintropica de Ernest Gotch </p>
 							</header>
 							<div class="info">
-								<!--
-									Note: The date should be formatted exactly as it's shown below. In particular, the
-									"least significant" characters of the month should be encapsulated in a <span>
-									element to denote what gets dropped in 1200px mode (eg. the "uary" in "January").
-									Oh, and if you don't need a date for a particular page or post you can simply delete
-									the entire "date" element.
-
-								-->
 								<span class="date"><span class="month">out<span>y</span></span> <span class="day">15</span><span class="year">, 2024</span></span>
-								<!--
-									Note: You can change the number of list items in "stats" to whatever you want.
-								-->
 								<ul class="stats">
 									<li><a href="#" class="icon fa-comment">0</a></li>
 									<li><a href="#" class="icon fa-heart">0</a></li>
@@ -112,11 +100,11 @@
 				<div id="footer">
 				   		<p> renanambrosia@gmail.com </p>
 				   		<p>siga-nos: 
-				   			<a target="_blank" href="https://www.reddit.com/user/CommercialSweet6014/" class="icon brands fa-reddit"style="background-color: white; color: #FF4500"></a>
-				   			<a target="_blank" href="https://www.youtube.com/channel/UCWEr83yP5Ja6_49Kcr3QwDw" class="icon brands fa-youtube"style=" background-color: white; color: red"></a>
-				   			<a target="_blank" href="https://www.linkedin.com/in/renan-ambiel-74439a1b7/" class="icon brands fa-linkedin"style="background-color: white; color:#0080FF;">
-				   			<a target="_blank" href="https://www.tumblr.com/blog/ambrosiaconsultoria-blog" class="icon brands fa-tumblr" style="background-color: black ; color: white;"></a>
-				   			<a target="_blank" href="https://github.com/RenanAmbiel" class="icon brands fa-github fa-fade" style="background-color: white; color: black;"></a>
+				   			<a target="_blank" href="https://www.reddit.com/user/CommercialSweet6014/" class="icon brands fa-reddit"style="; color: #FF4500"></a>
+				   			<a target="_blank" href="https://www.youtube.com/channel/UCWEr83yP5Ja6_49Kcr3QwDw" class="icon brands fa-youtube"style=" ; color: red"></a>
+				   			<a target="_blank" href="https://www.linkedin.com/in/renan-ambiel-74439a1b7/" class="icon brands fa-linkedin"style="; color:#0080FF;">
+				   			<a target="_blank" href="https://www.tumblr.com/blog/ambrosiaconsultoria-blog" class="icon brands fa-tumblr" style="background-color: black ; color: white; height: 1px"></a>
+				   			<a target="_blank" href="https://github.com/RenanAmbiel" class="icon brands fa-github fa-fade" style=" color: black;"></a>
 				   			
 				   		</a></p>
 				</div>
@@ -132,7 +120,7 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul>
-							<li class="current"><a href="#">Posts</a></li>
+							<li><a href="index.html">Posts</a></li>
 							<li><a href="#">aquivo</a></li>
 							<li><a href="">livros </a></li>
 							<li><a href=""target="_blank" >scripts</a></li>
@@ -151,7 +139,7 @@
 					<section class="box text-style1">
 						<div class="inner">
 							<p>
-								<strong> Sintropica Consultoria:</strong> soluções ambientais e agricolas. A nossa missão é trabalhar para um futuro mais verde <a href="https://sintropicaconsultoria.netlify.app/#"> visite nosso site </a>
+								<strong> Sintropica Consultoria:</strong> soluções ambientais e agricolas. A nossa missão é trabalhar para um futuro mais verde <<a href="https://sintropicaconsultoria.netlify.app/#"target="_blank"> visite nosso site </a>
 							</p>
 						</div>
 					</section>
