--- a/3.html
+++ b/3.html
@@ -19,12 +19,11 @@
 			<div id="content">
 				<div id="sidebar2"><h4> <a href= "#">POSTS RECENTES</a></h4>
 
-					<a href="#" class="image featured"><img src="images/pic01.jpg" alt="images" /><figcaption>Agricultura sintropica</figcaption></a>
-					<a href="#" class="image featured"><img src="images/pic02.jpg" alt="images" /><figcaption>Pesquisa científica</figcaption></a>
-					<a href="#" class="image featured"><img src="images/pic03.jpg" alt="images" /><figcaption>Agricultura de Precisão: Soluções Tecnológicas para Desafios Climáticos</figcaption></a>
-					<a href="#" class="image featured"><img src="images/pic04.jpg" alt="images" /><figcaption>O Poder do Python na Análise de Dados: Um Estudo de Caso com os Registros de Votação de 2022</figcaption></a>
-					<a href="#" class="image featured"><img src="images/pic05.jpg" alt="images" /><figcaption>Artigo: Uso de Inteligência Artificial no Geoprocessamento para Análise de Tipos de Telhados em Jacareí</figcaption></a>
-					<a href="#" class="image featured"><img src="images/pic06.jpg" alt="images" /><figcaption>WEBSIG que integram mapas interativos diretamente em páginas web</figcaption></a>
+					<a href="1.html#" class="image featured"><img src="images/pic01.jpg" alt="images" /><figcaption>Agricultura sintropica</figcaption></a>
+					<a href="2.html#" class="image featured"><img src="images/pic02.jpg" alt="images" /><figcaption>Pesquisa científica</figcaption></a>
+					<a href="3.html#" class="image featured"><img src="images/pic03.jpg" alt="images" /><figcaption>Agricultura de Precisão: Soluções Tecnológicas para Desafios Climáticos</figcaption></a>
+					<a href="4.html#" class="image featured"><img src="images/pic04.jpg" alt="images" /><figcaption>O Poder do Python na Análise de Dados: Um Estudo de Caso com os Registros de Votação de 2022</figcaption></a>
+					<a href="5.html#" class="image featured"><img src="images/pic05.jpg" alt="images" /><figcaption>Artigo: Uso de Inteligência Artificial no Geoprocessamento para Análise de Tipos de Telhados em Jacareí</figcaption></a>					<a href="#" class="image featured"><img src="images/pic06.jpg" alt="images" /><figcaption>WEBSIG que integram mapas interativos diretamente em páginas web</figcaption></a>
 					<a href="#" class="image featured"><img src="images/pic07.jpg" alt="images" /><figcaption> Mapas temáticos sobre uso do solo</figcaption></a>
 					<a href="#" class="image featured"><img src="images/pic08.jpg" alt="images" /><figcaption>Queimadas mata atlantica</figcaption></a>
 
@@ -38,12 +37,12 @@
 								<p>Pesquisa científicaPesquisa científicaPesquisa científica</p>
 							</header>
 							<div class="info">
-								<span class="date"><span class="month">Jul<span>y</span></span> <span class="day">8</span><span class="year">, 2014</span></span>
+								<span class="date"><span class="month">out<span>y</span></span> <span class="day">15</span><span class="year">, 2024</span></span>
 								<ul class="stats">
-									<li><a href="#" class="icon fa-comment">16</a></li>
-									<li><a href="#" class="icon fa-heart">32</a></li>
-									<li><a href="#" class="icon brands fa-twitter">64</a></li>
-									<li><a href="#" class="icon brands fa-facebook-f">128</a></li>
+									<li><a href="#" class="icon fa-comment">0</a></li>
+									<li><a href="#" class="icon fa-heart">0</a></li>
+									<li><a href="#" class="icon brands fa-twitter">0</a></li>
+									<li><a href="#" class="icon brands fa-facebook-f">0</a></li>
 								</ul>
 							</div>
 							<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
@@ -110,7 +109,7 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul>
-							<li class="current"><a href="#">Posts</a></li>
+							<li><a href="index.html">Posts</a></li>
 							<li><a href="#">aquivo</a></li>
 							<li><a href="">livros </a></li>
 							<li><a href=""target="_blank" >scripts</a></li>
@@ -129,7 +128,7 @@
 					<section class="box text-style1">
 						<div class="inner">
 							<p>
-								<strong> Sintropica Consultoria:</strong> soluções ambientais e agricolas. A nossa missão é trabalhar para um futuro mais verde <a href="https://sintropicaconsultoria.netlify.app/#"> visite nosso site </a>
+								<strong> Sintropica Consultoria:</strong> soluções ambientais e agricolas. A nossa missão é trabalhar para um futuro mais verde <<a href="https://sintropicaconsultoria.netlify.app/#"target="_blank"> visite nosso site </a>
 							</p>
 						</div>
 					</section>
